--- a/src/css/icon.css
+++ b/src/css/icon.css
@@ -1,72 +1,97 @@
 @font-face {
-  font-family: "toutiao";
-  /* Project id 3280299 */
-  src: url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.woff2?t=1648297255190') format('woff2'), url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.woff?t=1648297255190') format('woff'), url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.ttf?t=1648297255190') format('truetype');
+    font-family: "toutiao";
+    /* Project id 3280299 */
+    src: url('//at.alicdn.com/t/font_3280299_68aexcmrwsg.woff2?t=1648743832073') format('woff2'), url('//at.alicdn.com/t/font_3280299_68aexcmrwsg.woff?t=1648743832073') format('woff'), url('//at.alicdn.com/t/font_3280299_68aexcmrwsg.ttf?t=1648743832073') format('truetype');
 }
+
 .toutiao {
-  font-family: "toutiao" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: "toutiao" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
+
+.toutiao-shoucang1-copy-copy:before {
+    content: "\e8c8";
+}
+
 .toutiao-shouye:before {
-  content: "\e601";
+    content: "\e601";
 }
+
 .toutiao-sousuo:before {
-  content: "\e602";
+    content: "\e602";
 }
+
 .toutiao-youjiantou:before {
-  content: "\e603";
+    content: "\e603";
 }
+
 .toutiao-yanzhengma:before {
-  content: "\e604";
+    content: "\e604";
 }
+
 .toutiao-shipin:before {
-  content: "\e605";
+    content: "\e605";
 }
+
 .toutiao-gengduo:before {
-  content: "\e606";
+    content: "\e606";
 }
+
 .toutiao-pinglun:before {
-  content: "\e607";
+    content: "\e607";
 }
+
 .toutiao-fenxiang:before {
-  content: "\e608";
+    content: "\e608";
 }
+
 .toutiao-zuojiantou:before {
-  content: "\e609";
+    content: "\e609";
 }
+
 .toutiao-zuopin:before {
-  content: "\e60a";
+    content: "\e60a";
 }
+
 .toutiao-guanbi:before {
-  content: "\e60b";
+    content: "\e60b";
 }
+
 .toutiao-shanchu:before {
-  content: "\e60c";
+    content: "\e60c";
 }
+
 .toutiao-yuedu:before {
-  content: "\e60d";
+    content: "\e60d";
 }
+
 .toutiao-dianzan2:before {
-  content: "\e60e";
+    content: "\e60e";
 }
+
 .toutiao-shouji:before {
-  content: "\e60f";
+    content: "\e60f";
 }
+
 .toutiao-lishi:before {
-  content: "\e610";
+    content: "\e610";
 }
+
 .toutiao-wuwangluo:before {
-  content: "\e611";
+    content: "\e611";
 }
+
 .toutiao-shoucang:before {
-  content: "\e612";
+    content: "\e612";
 }
+
 .toutiao-wode:before {
-  content: "\e613";
+    content: "\e613";
 }
+
 .toutiao-wenda:before {
-  content: "\e614";
+    content: "\e614";
 }
