--- a/src/css/index.css
+++ b/src/css/index.css
@@ -70,3 +70,13 @@
 .toutiao-wenda:before {
   content: "\e614";
 }
+body {
+  background-color: #f5f7f9;
+}
+body .page-nav-bar {
+  background-color: #3296fa !important;
+}
+body .page-nav-bar .van-nav-bar__title,
+body .page-nav-bar .van-icon {
+  color: #fff;
+}
