--- a/src/style/icon.less
+++ b/src/style/icon.less
@@ -1,95 +1,98 @@
 @font-face {
-    font-family: "toutiao"; /* Project id 3280299 */
-    src: url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.woff2?t=1648297255190') format('woff2'),
-         url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.woff?t=1648297255190') format('woff'),
-         url('//at.alicdn.com/t/font_3280299_o98u7nlrsgf.ttf?t=1648297255190') format('truetype');
-  }
-  
-  .toutiao {
-    font-family: "toutiao" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .toutiao-shouye:before {
-    content: "\e601";
-  }
-  
-  .toutiao-sousuo:before {
-    content: "\e602";
-  }
-  
-  .toutiao-youjiantou:before {
-    content: "\e603";
-  }
-  
-  .toutiao-yanzhengma:before {
-    content: "\e604";
-  }
-  
-  .toutiao-shipin:before {
-    content: "\e605";
-  }
-  
-  .toutiao-gengduo:before {
-    content: "\e606";
-  }
-  
-  .toutiao-pinglun:before {
-    content: "\e607";
-  }
-  
-  .toutiao-fenxiang:before {
-    content: "\e608";
-  }
-  
-  .toutiao-zuojiantou:before {
-    content: "\e609";
-  }
-  
-  .toutiao-zuopin:before {
-    content: "\e60a";
-  }
-  
-  .toutiao-guanbi:before {
-    content: "\e60b";
-  }
-  
-  .toutiao-shanchu:before {
-    content: "\e60c";
-  }
-  
-  .toutiao-yuedu:before {
-    content: "\e60d";
-  }
-  
-  .toutiao-dianzan2:before {
-    content: "\e60e";
-  }
-  
-  .toutiao-shouji:before {
-    content: "\e60f";
-  }
-  
-  .toutiao-lishi:before {
-    content: "\e610";
-  }
-  
-  .toutiao-wuwangluo:before {
-    content: "\e611";
-  }
-  
-  .toutiao-shoucang:before {
-    content: "\e612";
-  }
-  
-  .toutiao-wode:before {
-    content: "\e613";
-  }
-  
-  .toutiao-wenda:before {
-    content: "\e614";
-  }
-  
+  font-family: "toutiao"; /* Project id 3280299 */
+  src: url('//at.alicdn.com/t/font_3280299_m7b9frqg4gp.woff2?t=1648741771632') format('woff2'),
+       url('//at.alicdn.com/t/font_3280299_m7b9frqg4gp.woff?t=1648741771632') format('woff'),
+       url('//at.alicdn.com/t/font_3280299_m7b9frqg4gp.ttf?t=1648741771632') format('truetype');
+}
+
+.toutiao {
+  font-family: "toutiao" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.toutiao-shoucang1-copy:before {
+  content: "\e8c7";
+}
+
+.toutiao-shouye:before {
+  content: "\e601";
+}
+
+.toutiao-sousuo:before {
+  content: "\e602";
+}
+
+.toutiao-youjiantou:before {
+  content: "\e603";
+}
+
+.toutiao-yanzhengma:before {
+  content: "\e604";
+}
+
+.toutiao-shipin:before {
+  content: "\e605";
+}
+
+.toutiao-gengduo:before {
+  content: "\e606";
+}
+
+.toutiao-pinglun:before {
+  content: "\e607";
+}
+
+.toutiao-fenxiang:before {
+  content: "\e608";
+}
+
+.toutiao-zuojiantou:before {
+  content: "\e609";
+}
+
+.toutiao-zuopin:before {
+  content: "\e60a";
+}
+
+.toutiao-guanbi:before {
+  content: "\e60b";
+}
+
+.toutiao-shanchu:before {
+  content: "\e60c";
+}
+
+.toutiao-yuedu:before {
+  content: "\e60d";
+}
+
+.toutiao-dianzan2:before {
+  content: "\e60e";
+}
+
+.toutiao-shouji:before {
+  content: "\e60f";
+}
+
+.toutiao-lishi:before {
+  content: "\e610";
+}
+
+.toutiao-wuwangluo:before {
+  content: "\e611";
+}
+
+.toutiao-shoucang:before {
+  content: "\e612";
+}
+
+.toutiao-wode:before {
+  content: "\e613";
+}
+
+.toutiao-wenda:before {
+  content: "\e614";
+}
